--- a/LifeLine/package.json
+++ b/LifeLine/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.11.0",
+    "prismjs": "^1.8.1",
     "rc-tree": "^1.7.7",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
